--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "vue-project",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --port 5050",
-    "typecheck": "vue-tsc --noEmit",
-    "deploy": "sh deploy.sh"
-  },
-  "dependencies": {
-    "vue": "^3.2.31"
-  },
-  "devDependencies": {
-    "@types/node": "^16.11.26",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/tsconfig": "^0.1.3",
-    "typescript": "~4.6.3",
-    "vite": "^2.9.1",
-    "vue-tsc": "^0.33.9"
-  }
+    "name": "vue-project",
+    "packageManager": "pnpm@7.0.0",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "preview": "vite preview --port 5050",
+        "typecheck": "vue-tsc --noEmit",
+        "deploy": "sh deploy.sh"
+    },
+    "dependencies": {
+        "vue": "^3.2.37"
+    },
+    "devDependencies": {
+        "@types/node": "^16.11.45",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "@vue/tsconfig": "^0.1.3",
+        "typescript": "~4.6.4",
+        "vite": "^3.0.3",
+        "vue-tsc": "^0.33.9"
+    }
 }
