--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vitejs/plugin-vue": "^2.3.3",
         "@vue/tsconfig": "^0.1.3",
         "typescript": "~4.6.4",
+        "unocss": "^0.45.3",
         "vite": "^3.0.3",
         "vue-tsc": "^0.33.9"
     }
