--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "vue-project",
     "packageManager": "pnpm@7.0.0",
     "version": "0.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
@@ -10,15 +11,16 @@
         "deploy": "sh deploy.sh"
     },
     "dependencies": {
-        "vue": "^3.2.37"
+        "vue": "^3.4.21"
     },
     "devDependencies": {
-        "@types/node": "^16.11.45",
-        "@vitejs/plugin-vue": "^2.3.3",
-        "@vue/tsconfig": "^0.1.3",
-        "typescript": "~4.6.4",
-        "unocss": "^0.45.3",
-        "vite": "^3.0.3",
-        "vue-tsc": "^0.33.9"
+        "@tsconfig/node20": "^20.1.4",
+        "@types/node": "^20.12.7",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "@vue/tsconfig": "^0.5.1",
+        "typescript": "~5.4.5",
+        "unocss": "0.59.1",
+        "vite": "^5.2.8",
+        "vue-tsc": "^2.0.13"
     }
 }
